# arxiv-mcp-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: lint.yml
src/arxiv_mcp_server/: __init__.py  config.py  server.py
src/arxiv_mcp_server/prompts/: __init__.py  deep_research_analysis_prompt.py  handlers.py  prompt_manager.py  prompts.py
src/arxiv_mcp_server/resources/: papers.py
src/arxiv_mcp_server/tools/: __init__.py  download.py  list_papers.py  read_paper.py  search.py
tests/: conftest.py  test_config.py
tests/prompts/: conftest.py  test_prompt_integration.py  test_prompts.py
tests/tools/: test_download.py  test_download_html.py  test_search.py
